# aigc

./: README.md  pyproject.toml  run.py
agents/: README.md  __init__.py
agents/orchestrator/: agent.py  prompt.py  tools.py
agents/toutiao_agent/: agent.py  prompt.py
agents/user_agent/: prompt.py  tools.py
common/: callbacks.py  config.py  dialogue_history.py  recorder.py  utils.py
conf/: common_config.py  orchestrator.yaml  run.yaml  ui.yaml
conf/a2a/: default.yaml
conf/hydra/job_logging/: custom.yaml
conf/orchestrator/: default.yaml
conf/task/agents/user/: simple.yaml
conf/task/mcps/sqlite_server/: authority_management.yaml  demo.yaml  ocr_recognition.yaml  operation_records.yaml
conf/task/orchestrator/: simple.yaml
hosts/cli/: pyproject.toml
hosts/multiagent/: host_agent.py  pyproject.toml  remote_agent_connection.py
mcps/db-service/: db_handler.py  main.py  pyproject.toml
mcps/image-service/: image_model.py  main.py  pyproject.toml
mcps/news-service/: main.py  pyproject.toml
mcps/video-service/: main.py  pyproject.toml  video_model.py
orchestrator/: README.md  __main__.py  orchestrator.py  orchestrator_executor.py  pyproject.toml
runners/: agent_runner.py  mcp_runner.py
