[project]
name = "aigc"
version = "0.1.0"
description = "Aigc application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.8",
    "arrow>=1.3.0",
    "dotenv>=0.9.9",
    "fire>=0.7.0",
    "google-adk>=1.3.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "hydra-core>=1.3.2",
    "jwcrypto>=1.5.6",
    "lark-oapi>=1.4.17",
    "litellm>=1.67.2",
    "llama-index-llms-litellm>=0.4.2",
    "loguru>=0.7.3",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "pyserial>=3.5",
    "rapidocr==2.0.6",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["a2a", "hosts", "common", "runners", "conf"]

[tool.uv.workspace]
members = [
    "orchestrator",
    "hosts/cli",
    "hosts/multiagent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
