[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "db-service"
version = "0.1.0"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.27"
mcp = "*"
starlette = "*"
uvicorn = "*"

[tool.poetry.scripts]
start = "main:main"