[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "news-service"
version = "0.1.0"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
playwright = "^1.38.0"

[tool.poetry.scripts]
start = "main:app"