[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "video-service"
version = "0.1.0"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"

[tool.poetry.scripts]
start = "main:app"